include/dsspm_capi.h

    
    DSSPM_CAPI_DLL void DSSProgress_Close(void);
    
    /*
    Caption to appear on the bottom of the DSS Progress form.
    */
    DSSPM_CAPI_DLL void DSSProgress_Set_Caption(char* Value);
    
    /*
    Percent progress to indicate [0..100]
    */
    DSSPM_CAPI_DLL void DSSProgress_Set_PctProgress(int32_t Value);
    
    DSSPM_CAPI_DLL void DSSProgress_Show(void);